<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_start"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btn_exit"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/exit_btn_bg"
        android:contentDescription="@string/exit" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">

        <Button
            android:id="@+id/btn_start"
            style="@android:style/Widget.Button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/play_btn"
            android:fontFamily="@font/chewy"
            android:padding="6dp"
            android:textColor="@color/accent"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn_invite_friends"
            style="@android:style/Widget.Button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/share_btn"
            android:fontFamily="@font/chewy"
            android:padding="6dp"
            android:textColor="@color/accent"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/high_score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chewy"
                android:text="@string/high_score_label"
                android:textColor="@color/accent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/high_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/high_score_label"
                android:fontFamily="@font/chewy"
                android:text="@string/high_score"
                android:textColor="@color/primary_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <ImageButton
                android:id="@+id/btn_music"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/music"
                android:tint="@color/accent"
                android:contentDescription="@string/music" />

            <ImageButton
                android:id="@+id/btn_sound"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toEndOf="@id/btn_music"
                android:background="@drawable/sound"
                android:tint="@color/accent"
                android:contentDescription="@string/sound" />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>