<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    tools:context=".GameEngineActivity">

    <ImageButton
        android:id="@+id/btn_back_gameplay"
        android:layout_alignParentBottom="true"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/back_btn"
        android:contentDescription="@string/back_btn" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/heart1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/game_life"
            android:background="@drawable/life"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/heart2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/game_life"
            android:background="@drawable/life"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/heart3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/game_life"
            android:background="@drawable/life"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/heart4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/game_life"
            android:background="@drawable/life"
            tools:ignore="VectorDrawableCompat"/>

        <ImageView
            android:id="@+id/heart5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/game_life"
            android:background="@drawable/life"
            tools:ignore="VectorDrawableCompat"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/go_button"
            style="?android:borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_background"
            android:fontFamily="@font/chewy"
            android:onClick="goButtonClickHandler"
            android:text="@string/play_game"
            android:textColor="@color/primary_dark"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chewy"
                android:text="@string/level_label"
                android:textColor="@color/accent"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/level_display"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/chewy"
                android:gravity="end"
                android:text="@string/level_number"
                android:textColor="@color/accent"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chewy"
                android:text="@string/score_label"
                android:textColor="@color/accent"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/score_display"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/chewy"
                android:gravity="end"
                android:text="@string/level_number"
                android:textColor="@color/accent"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>





</RelativeLayout>